compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__bits.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<x:bits>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  <<x:bits>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../rakun.mjs";

function go(x) {
  return toBitArray([x.buffer]);
}
