compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__empty.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<>>
}


----- COMPILED JAVASCRIPT
import { toBitArray } from "../rakun.mjs";

function go() {
  return toBitArray([]);
}
