compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__float.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1.1:float>>\n}\n"
---
----- SOURCE CODE

fn go() {
  <<1.1:float>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, sizedFloat } from "../rakun.mjs";

function go() {
  return toBitArray([sizedFloat(1.1, 64, true)]);
}
