compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__match_bytes.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<1, y>> = x\n}\n"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x.byteAt(0) !== 1 || !(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let y = x.byteAt(1);
  return x;
}
