compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__negative_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<1:size(-1)>>\n}\n"
---
import { toBitArray, sizedInt } from "../rakun.mjs";

function go() {
  return toBitArray([sizedInt(1, -1, true)]);
}
