compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bit_arrays__utf8.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<256, 4, x, \"Rakun\":utf8>>\n}\n"
---
----- SOURCE CODE

fn go(x) {
  <<256, 4, x, "Rakun":utf8>>
}


----- COMPILED JAVASCRIPT
import { toBitArray, stringBits } from "../rakun.mjs";

function go(x) {
  return toBitArray([256, 4, x, stringBits("Rakun")]);
}
